# Mlops2025w-112201022

./: .gitignore  .gitmodules
Assignments/Assigment-5/: Q1_conll2003_stats.ipynb
Assignments/Assigment-5/wandb/: latest-run
Assignments/Assigment-5/wandb/offline-run-20251013_164707-3x5caj2r/: run-3x5caj2r.wandb
Assignments/Assigment-5/wandb/offline-run-20251013_211809-zqni5493/: run-zqni5493.wandb
Assignments/Assigment-5/wandb/offline-run-20251013_230318-yx3h6r45/: run-yx3h6r45.wandb
Assignments/Assigment-5/wandb/offline-run-20251013_230729-l2d9x213/: run-l2d9x213.wandb
Assignments/Assigment-5/wandb/offline-run-20251013_231154-7ojql64s/: run-7ojql64s.wandb
Assignments/Assigment-5/wandb/offline-run-20251013_231828-g7yreyuy/: run-g7yreyuy.wandb
Assignments/Assigment-5/wandb/offline-run-20251013_233717-75eqjzoq/: run-75eqjzoq.wandb
Assignments/Assignment-3/: question 3.py
Assignments/Assignment-4/Assignment_4_UV/: .gitignore  Assignment_4_Report.md  Q3_Performance_Analysis.md  README.md  convert_data.py  export_report.sh  get_data.sh  pyproject.toml  question1.py  question1.sql  question2.py  question3.py  question4.py  test_question4.py
CLASS/Week-10/: app.py  class10.ipynb  referece.ipynb
CLASS/Week-3/: diff_file.txt  fact.sh  sum.sh
CLASS/Week-4/: main.py  pyproject.toml
CLASS/Week-8/: QUICK_REFERENCE.txt  VENV_SUCCESS.txt  activate.sh  get_username.py  quick_test.py  test_and_docker.sh
CLASS/Week-8/wandb/: latest-run
CLASS/Week-9/: .gitignore  test_api.py  wandb_cloud_deploy_lab_detailed.ipynb
CLASS/Week-9/app/: main.py
(+36 files in other folders)
